--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -175,7 +175,7 @@
           </div>
 
           <div class="field">
-            <%= form.text_area :body, class: "form-control mb-4", placeholder: "What does the applicant need to change in their application?", required: true %>
+            <%= form.text_area :body, class: "form-control mb-4", placeholder: "What's your question?", required: true %>
           </div>
 
           <div class="actions text-center mb-5">
