--- a/app/views/home/pending.html.erb
+++ b/app/views/home/pending.html.erb
@@ -20,7 +20,7 @@
         <% if need_your_vote.count >= 1 %>
           <div class="table-responsive">
             <table class="table table-striped">
-              <thead class="black white-text">
+              <thead class="bg-toca-red white-text">
                 <tr>
                   <th scope="col">Application</th>
                   <th scope="col">Amount</th>
@@ -77,7 +77,7 @@
         <% if already_voted.count >= 1 %>
           <div class="table-responsive">
             <table class="table table-striped">
-              <thead class="black white-text">
+              <thead class="bg-toca-red white-text">
                 <tr>
                   <th scope="col">Application</th>
                   <th scope="col">Amount</th>
