--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,7 +23,7 @@
       <h2 class="toca-uppercase color-toca-red"><%= pluralize(@admin.count, "Admin") %></h2>
       <div class="table-responsive">
         <table class="table table-striped">
-          <thead class="black white-text">
+          <thead class="bg-toca-red white-text">
             <tr>
               <th scope="col">#</th>
               <th scope="col">Name</th>
@@ -70,7 +70,7 @@
       <h2 class="toca-uppercase color-toca-red"><%= pluralize(@committee.count, "Committee Member") %></h2>
       <div class="table-responsive">
         <table class="table table-striped">
-          <thead class="black white-text">
+          <thead class="bg-toca-red white-text">
             <tr>
               <th scope="col">#</th>
               <th scope="col">Name</th>
@@ -117,7 +117,7 @@
       <h2 class="toca-uppercase color-toca-red"><%= pluralize(@members.count, "Member") %></h2>
       <div class="table-responsive">
         <table class="table table-striped">
-          <thead class="black white-text">
+          <thead class="bg-toca-red white-text">
             <tr>
               <th scope="col">#</th>
               <th scope="col">Name</th>
