--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -6,11 +6,14 @@
   <div class="form-inputs">
     <%= f.input :application_type %>
     <%= f.input :application_id %>
+    
     <%= f.input :accept %>
+
     <%= f.input :modify %>
     <%= f.input :modification %>
     <%= f.input :suggest_loan %>
     <%= f.input :describe_loan %>
+
     <%= f.input :deny %>
     <%= f.input :denial_fund_overuse %>
     <%= f.input :denial_not_qualify %>
@@ -18,8 +21,9 @@
     <%= f.input :denial_not_involved_charity %>
     <%= f.input :denial_other %>
     <%= f.input :denial_other_description %>
+
     <%= f.input :superseded %>
-    <%= f.input :references %>
+    <%= f.input :user_id %>
   </div>
 
   <div class="form-actions">
