--- a/app/views/hardship_mailer/hardship_denied_email.html.erb
+++ b/app/views/hardship_mailer/hardship_denied_email.html.erb
@@ -16,7 +16,14 @@
       After careful consideration, we regret to inform you that we are not able to financially assist you in your requested situation.
     </p>
     <p>
-      The Decision Committee thoroughly reviewed your application and has determined, based on the TOCA Cares Corporate Assistance guidelines, that your situation does not meet one or more of the qualifications for aid. Because this is a community fund, the Decision Committee is tasked with the difficult responsibility of making sure the fund is only used in authorized situations. Additionally, since contributors to the fund receive tax benefits, the Decision Committee must follow specific legal regulations, which can hinder what qualifies and what does not. There are a number of reasons your situation may not be eligible; some examples may include, overuse of fund previously, not enough time between fund applications, misunderstanding of the fund, lack of demonstrated need, lack of relative hardship compared to other applications, etc. For clarity on your decision, feel free to refer to the <%= link_to "info page", page_url(:info), style: "color: #EB0029; font-weight: 700; text-decoration: none" %> on the TOCA Cares website for more information on what qualifies as a hardship.
+      The Decision Committee thoroughly reviewed your application and has determined, based on the TOCA Cares Corporate Assistance guidelines, that your situation does not meet one or more of the qualifications for aid. Because this is a community fund, the Decision Committee is tasked with the difficult responsibility of making sure the fund is only used in authorized situations.
+    </p>
+    <p>
+      Additionally, since contributors to the fund receive tax benefits, the Decision Committee must follow specific legal regulations, which can hinder what qualifies and what does not. There are a number of reasons your situation may not be eligible; some examples may include, overuse of fund previously, not enough time between fund applications, misunderstanding of the fund, lack of demonstrated need, lack of relative hardship compared to other applications, etc.
+    </p>
+    <!-- add vote info here -->
+    <p>
+      For clarity on your decision, feel free to refer to the <%= link_to "info page", page_url(:info), style: "color: #EB0029; font-weight: 700; text-decoration: none" %> on the TOCA Cares website for more information on what qualifies as a hardship.
     </p>
     <p>
       We understand this decision may be frustrating.  However, we are confident that you can overcome this without the help of the fund. We take all applications seriously, and we encourage you to apply again for other hardships in the future. You are a valued part of the TOCA family.
