--- a/app/views/hardships/index.html.erb
+++ b/app/views/hardships/index.html.erb
@@ -9,7 +9,7 @@
         <% if @undecided.count >= 1 %>
           <div class="table-responsive">
             <table class="table table-striped">
-              <thead class="black white-text">
+              <thead class="bg-toca-red white-text">
                 <tr>
                   <th scope="col">Application</th>
                   <th scope="col">Amount</th>
@@ -46,7 +46,7 @@
         <% if @approved.count >= 1 %>
           <div class="table-responsive">
             <table class="table table-striped">
-              <thead class="black white-text">
+              <thead class="bg-toca-red white-text">
                 <tr>
                   <th scope="col">Application</th>
                   <th scope="col">Amount</th>
@@ -86,7 +86,7 @@
         <% if @rejected.count >= 1 %>
           <div class="table-responsive">
             <table class="table table-striped">
-              <thead class="black white-text">
+              <thead class="bg-toca-red white-text">
                 <tr>
                   <th scope="col">Application</th>
                   <th scope="col">Amount</th>
