--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -11,7 +11,7 @@
       <% if @unanswered.count >= 1 %>
         <div class="table-responsive">
           <table class="table table-striped">
-            <thead class="black white-text">
+            <thead class="bg-toca-red white-text">
               <tr>
                 <th scope="col">Answered?</th>
                 <th scope="col">Question</th>
@@ -66,7 +66,7 @@
       <% if @answered.count >= 1 %>
         <div class="table-responsive">
           <table class="table table-striped">
-            <thead class="black white-text">
+            <thead class="bg-toca-red white-text">
               <tr>
                 <th scope="col">Answered?</th>
                 <th scope="col">Question</th>
